# symbolica-community

./: .gitignore  Cargo.toml  Readme.md  Readme_pypi.md  pyproject.toml  test.py
.github/workflows/: publish_pypi.yml  test.yml
example_extension/: Cargo.toml
example_extension/src/: lib.rs
examples/: spenso_and_idenso.ipynb
python/symbolica/: __init__.py  core.pyi
python/symbolica/community/: example.pyi  idenso.pyi  spenso.pyi  vakint.pyi
python/symbolica/community/example_extension/: __init__.py  __init__.pyi
python/symbolica/community/idenso/: __init__.py  __init__.pyi
python/symbolica/community/spenso/: __init__.py  __init__.pyi
python/symbolica/community/vakint/: __init__.py  __init__.pyi
python/symbolica_community/: symbolica_community.pyi
src/: lib.rs
src/physics/: tensors.rs  vakint.rs
src/physics/tensors/: network.rs  structure.rs
tests/: __init__.py  conftest.py  test_basic.py  test_community.py  test_spenso_and_idenso.py  test_vakint.py
