[package]
authors = ["Ben Ruijl <benruyl@gmail.com>"]
categories = ["science"]
description = "A blazing fast computer algebra system, with community extensions"
edition = "2021"
keywords = ["algebra", "symbolic", "manipulation", "mathematics", "physics"]
license = "MIT"
name = "symbolica_community"
readme = "Readme.md"
repository = "https://github.com/benruijl/symbolica-community"
rust-version = "1.88"
version = "1.5.0"
exclude = ["dist"]

[[bin]]
name = "stub_gen"
required-features = ["python_stubgen"]

[lib]
name = "symbolica_community"
crate-type = ["rlib", "cdylib"]

[features]
default = ["module"]
module = ["pyo3/abi3", "symbolica/python_abi3"] # incompatible with stub_gen
python_stubgen = [
    "pyo3-stub-gen",
    "symbolica/python_stubgen",
    "spynso3/python_stubgen",
    "idenso/python_stubgen",
    "vakint/python_stubgen",
    "example_extension/python_stubgen",
]

[dependencies]
example_extension = { path = "example_extension" }
idenso = { version = "0.3", features = ["bincode", "python"] }
symbolica = { version = "1.5", features = ["python_export"] }
pyo3 = { version = "0.28", features = ["abi3"] }
pyo3-stub-gen = { version = "0.17", optional = true, default-features = false, features = [
    "numpy",
] }
spynso3 = { version = "0.1" }
vakint = { git = "https://github.com/alphal00p/gammaloop", rev = "3c55fae78ce3d13802ab24aed014fdc4abe6f492", features = [
    "symbolica_community_module",
] }

[patch.crates-io]
spynso3 = { git = "https://github.com/alphal00p/gammaloop", rev = "3c55fae78ce3d13802ab24aed014fdc4abe6f492" }
idenso = { git = "https://github.com/alphal00p/gammaloop", rev = "3c55fae78ce3d13802ab24aed014fdc4abe6f492" }
spenso = { git = "https://github.com/alphal00p/gammaloop", rev = "3c55fae78ce3d13802ab24aed014fdc4abe6f492" }
spenso-hep-lib = { git = "https://github.com/alphal00p/gammaloop", rev = "3c55fae78ce3d13802ab24aed014fdc4abe6f492" }

symbolica = { git = "https://github.com/symbolica-dev/symbolica", rev = "cf756e1d98d45c61ba3c08bfd31990e381dd8ede" }

[build-dependencies]
pyo3-build-config = "*"
