[package]
authors = ["Ben Ruijl <benruyl@gmail.com>"]
categories = ["science"]
description = "A blazing fast computer algebra system, with community extensions"
edition = "2024"
keywords = ["algebra", "symbolic", "manipulation", "mathematics", "physics"]
license = "MIT"
name = "symbolica_community"
readme = "Readme.md"
repository = "https://github.com/benruijl/symbolica-community"
rust-version = "1.88"
version = "2.2.0"
exclude = ["dist"]

[[bin]]
name = "stub_gen"
required-features = ["python_stubgen"]

[lib]
name = "symbolica_community"
crate-type = ["rlib", "cdylib"]

[features]
default = ["module"]
module = ["pyo3/abi3", "symbolica/python_abi3"] # incompatible with stub_gen
python_stubgen = [
    "pyo3-stub-gen",
    "symbolica/python_stubgen",
    "spynso3/python_stubgen",
    "idenso/python_stubgen",
    "vakint/python_stubgen",
    "example_extension/python_stubgen",
]

[dependencies]
example_extension = { path = "example_extension" }
idenso = { version = "0.3", features = ["bincode", "python"] }
symbolica = { version = "2.2", features = ["python_export"] }
symbolica-integrate = { version = "1.0", features = ["steps"] }
pyo3 = { version = "0.28", features = ["abi3"] }
pyo3-stub-gen = { version = "0.17", optional = true, default-features = false, features = [
    "numpy",
] }
spynso3 = { version = "0.1" }
vakint = { git = "https://github.com/alphal00p/gammaloop", rev = "d1f99ffab783715050fe5fd1de676670d7f3e2aa", features = [
    "symbolica_community_module",
] }
mimalloc = { version = "0.1", features = [
    "local_dynamic_tls",
] } # prevent TLS allocation errors in conjunction with numpy

[patch.crates-io]
spynso3 = { git = "https://github.com/alphal00p/gammaloop", rev = "d1f99ffab783715050fe5fd1de676670d7f3e2aa" }
idenso = { git = "https://github.com/alphal00p/gammaloop", rev = "d1f99ffab783715050fe5fd1de676670d7f3e2aa" }
spenso = { git = "https://github.com/alphal00p/gammaloop", rev = "d1f99ffab783715050fe5fd1de676670d7f3e2aa" }
spenso-hep-lib = { git = "https://github.com/alphal00p/gammaloop", rev = "d1f99ffab783715050fe5fd1de676670d7f3e2aa" }

symbolica = { git = "https://github.com/symbolica-dev/symbolica", branch = "main" }
numerica = { git = "https://github.com/symbolica-dev/symbolica", branch = "main" }
graphica = { git = "https://github.com/symbolica-dev/symbolica", branch = "main" }

[build-dependencies]
pyo3-build-config = "*"
numerica = { version = "2.2", features = ["gmp"] }
