[build-system]
requires = ["maturin>=1.7,<2.0"]
build-backend = "maturin"

[project]
authors = [
    { name = "Ben Ruijl", email = "benruyl@gmail.com" },
    { name = "Lucien Huber", email = "mail@lucien.ch" },
    { name = "Valentin Hirschi", email = "valentin.hirschi@gmail.com" },
]
name = "symbolica"
description = "Community-enhanced version of Symbolica: a blazing fast computer algebra system"
keywords = ["math", "algebra", "polynomial", "expression", "manipulation"]
version = "0.18.0"
readme = "Readme.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
]

[tool.maturin]
features = ["pyo3/extension-module"]
module-name = "symbolica.core"
python-source = "python"

[tool.poetry]
package-mode = false

[tool.uv]
cache-keys = [{ file = "pyproject.toml" }, { file = "src/*.rs" }]
