[build-system]
requires = ["maturin>=1.7,<2.0"]
build-backend = "maturin"

[project]
authors = [
    { name = "Ben Ruijl", email = "benruyl@gmail.com" },
    { name = "Lucien Huber", email = "mail@lucien.ch" },
    { name = "Valentin Hirschi", email = "valentin.hirschi@gmail.com" },
]
name = "symbolica"
description = "Community-enhanced version of Symbolica: a blazing fast computer algebra system"
keywords = ["math", "algebra", "polynomial", "expression", "manipulation"]
version = "1.2.0"
readme = "Readme_pypi.md"
requires-python = ">=3.7"
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Programming Language :: Rust",
    "Topic :: Scientific/Engineering :: Mathematics",
]

[tool.maturin]
features = ["pyo3/extension-module"]
module-name = "symbolica.core"
python-source = "python"

[project.urls]
homepage = "https://symbolica.io"
repository = "https://github.com/symbolica-dev/symbolica"

[tool.poetry]
package-mode = false

[tool.uv]
cache-keys = [{ file = "pyproject.toml" }, { file = "src/*.rs" }]

[dependency-groups]
dev = ["ipykernel>=6.16.2"]
