[package]
name = "example_extension"
version = "0.1.0"
edition = "2024"


[lib]
name = "example_extension"
crate-type = ["rlib", "cdylib"]

[dependencies]
symbolica = { version = "0.19", features = ["python_export"] }
pyo3 = "0.27"
pyo3-stub-gen = { version = "0.16", default-features = false }

[features]
python_stubgen = ["symbolica/python_stubgen"]
