[package]
name = "example_extension"
version = "0.1.0"
edition = "2024"


[lib]
name = "example_extension"
crate-type = ["rlib", "cdylib"]

[dependencies]
symbolica = { version = "1.2", features = ["python_export"] }
pyo3 = "0.27"
pyo3-stub-gen = { version = "0.17", optional = true, default-features = false }

[features]
python_stubgen = ["pyo3-stub-gen", "symbolica/python_stubgen"]
